--- a/casestudies/18/casestudy/www/layout/case_id_18_id_38_c_bio.html
+++ b/casestudies/18/casestudy/www/layout/case_id_18_id_38_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Thomas Melville | New England Cable News and the Terry Glenn Story
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Thomas Melville | New England Cable News and the Terry Glenn Story
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: #1f805c;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,218 +84,204 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/18/knightcase_logo.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_18.html" title="Home"><span>Biography: Thomas Melville</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_18.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_207.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_208.html">Getting off the Ground</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_209.html">Into the Black</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_210.html">The Market</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_211.html">NECN's Niche</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_212.html">A Sports-Mad City</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_18_id_213.html">The New England Patriots and Terry Glenn</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/18/New&#32;England&#32;Cable&#32;News&#32;and&#32;the&#32;Terry&#32;Glenn&#32;Story_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_18.html">Home</a></div>		
-		<h1 class="title">Biography: Thomas&nbsp;Melville</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><p>Thomas Melville in 1999 was NECN executive producer. He joined NECN in 1993 as chief political correspondent and became executive producer in 1995.</p>
-<p>Before coming to NECN, Melville was consumer reporter at WPTV-TV in West Palm Beach, FL, and an anchor and reporter at WNNE-TV in White River Junction, VT, KCAU-TV in Sioux City, IA, WASR-AM in Wolfeboro, NH, and WLNH-FM in Laconia, NH.  Melville began his career in journalism as a sports writer at the Boston<em> Herald-American</em>. He served for two years in the United States Peace Corps, as an agriculture extension agent and schoolteacher in the Dominican Republic. Melville was co-writer and executive producer of the award-winning 1997 NECN documentary, <em>Look For Me Here: 299 Days in the Life of Nora Lenihan.</em></p>
-<p><span class="caption2"><a class="media {width:420, height:286}" href="../../files/videos/44/melville.flv">Melville talks about his job at NECN.</a></span></p></div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/18/knightcase_logo.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_18.html" title="Home">
+         <span>
+          Biography: Thomas Melville
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_18.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_207.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_208.html">
+          Getting off the Ground
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_209.html">
+          Into the Black
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_210.html">
+          The Market
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_211.html">
+          NECN's Niche
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_212.html">
+          A Sports-Mad City
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_213.html">
+          The New England Patriots and Terry Glenn
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_18_id_37_c_bio.html">Charles J.&nbsp;Kravetz</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_18_id_38_c_bio.html">Thomas&nbsp;Melville</a></li>
-
-<li class="leaf"><a  href="case_id_18_id_39_c_bio.html">Steve&nbsp;Safran</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div style="clear: both;"></div>
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><!-- copyright notice --></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/18/New England Cable News and the Terry Glenn Story_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_18.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Thomas Melville
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <p>
+         Thomas Melville in 1999 was NECN executive producer. He joined NECN in 1993 as chief political correspondent and became executive producer in 1995.
+        </p>
+        <p>
+         Before coming to NECN, Melville was consumer reporter at WPTV-TV in West Palm Beach, FL, and an anchor and reporter at WNNE-TV in White River Junction, VT, KCAU-TV in Sioux City, IA, WASR-AM in Wolfeboro, NH, and WLNH-FM in Laconia, NH.  Melville began his career in journalism as a sports writer at the Boston
+         <em>
+          Herald-American
+         </em>
+         . He served for two years in the United States Peace Corps, as an agriculture extension agent and schoolteacher in the Dominican Republic. Melville was co-writer and executive producer of the award-winning 1997 NECN documentary,
+         <em>
+          Look For Me Here: 299 Days in the Life of Nora Lenihan.
+         </em>
+        </p>
+        <p>
+         <iframe frameborder="0" height="270" src="https://www.youtube.com/embed/D6WcGKyZapE?origin=http://ccnmtl.columbia.edu" type="text/html" width="480">
+         </iframe>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_18_id_37_c_bio.html">
+          Charles J. Kravetz
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_18_id_38_c_bio.html">
+          Thomas Melville
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_18_id_39_c_bio.html">
+          Steve Safran
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div style="clear: both;">
+   </div>
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <!-- copyright notice -->
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
